--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
-- add mail features <--
+- fix todos
+
+- add landing page
+
+- add other pages <--
 
 - make frontend styling, light/dark mode switch
 
@@ -11,5 +15,7 @@
 - add notifications and sync
 
 - add unit and e2e tests
+
+- optimize for performance and seo
 
 - finish app and deploy
