--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-- add remaining functionality to pages <-- 
+- add remaining functionality to pages <--
+ - Extend task schema to include task status like TODO | IN_PROGRESS ... <-
 
 - add auth and middleware
 
