--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,11 @@
 == not finished due to bundle size ==
 
+- update deps *
+
+-> replace tremor with another graph lib (first check its issues about bundle size)
+
+- add remaining features to pages
+
 - add auth and middleware
 
 - add integrations (calendar, mail, files for many vendors like google, microsoft ..)
