--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 == not finished due to bundle size ==
 
-- add remaining features to pages
+- add remaining features to pages <--
 
 - add auth and middleware
 
