--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+- setup monorepo
+
 -> add calendar service to ci workflows into release-svc
 
 - add integrations (mail, files for many vendors like google, microsoft ..) <--
