fix cookies error

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
-- add all type of tests <--
+-> fix build, docker and other errors
+
+- add all type of tests, follow coverage <--
 
 - add remaining features to pages
 
